# pycrg

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  pre-release-build.yml  release.yml  testpypi.yml
examples/scripts/: basic_roadsurface_demo.py  curvature_demo.py  dataset_contactpoint_demo.py  eval_options_demo.py  eval_xyuv_demo.py  eval_z_demo.py  experimental_allocator_api_demo.py  message_callback_demo.py  reader_demo.py  simple_demo.py  unsafe_allocator_callbacks_demo.py
src/pycrg/: __init__.py  _native.c  api.py  constants.py  errors.py  experimental.py
tests/: test_smoke.py
tools/: vendor_snapshot.py
